<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/rl_data_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/personal_Info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_firstName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/border"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp"
                android:textCursorDrawable="@null"/>

            <EditText
                android:id="@+id/et_lastName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:background="@drawable/border"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="15sp"
                android:textCursorDrawable="@null"/>

            <LinearLayout
                android:id="@+id/ll_gender"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_male"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:gravity="center_vertical"
                    android:text="@string/male"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_female"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:gravity="center_vertical"
                    android:text="@string/female"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/dob"
                android:textColor="#000000"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/ll_dob"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/border"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@null"
                    android:hint="@string/mm_dd_yy"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:textCursorDrawable="@null"/>

                <ImageView
                    android:id="@+id/im_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:src="@drawable/calender" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_dept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/Dept"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinner_dept"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:backgroundTint="#000000"
                android:padding="10dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/personal_Info_layout"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_image" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_below="@+id/contact_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_border"
            android:text="@string/btn_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnpreview"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btnpre_border"
            android:text="@string/preview"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_data_get"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
</RelativeLayout>